- Applied a kernel patch from pjd@.

--- a/lib/libc/sys/Makefile.inc
+++ b/lib/libc/sys/Makefile.inc
@@ -81,50 +81,55 @@ ${SPSEUDO}:
 MAN+=	abort2.2 accept.2 access.2 acct.2 adjtime.2 \
 	aio_cancel.2 aio_error.2 aio_read.2 aio_return.2 \
 	aio_suspend.2 aio_waitcomplete.2 aio_write.2 \
-	bind.2 brk.2 cap_enter.2 cap_new.2 chdir.2 chflags.2 \
-	chmod.2 chown.2 chroot.2 clock_gettime.2 close.2 closefrom.2 \
-	connect.2 cpuset.2 cpuset_getaffinity.2 dup.2 execve.2 _exit.2 \
-	extattr_get_file.2 fcntl.2 ffclock.2 fhopen.2 flock.2 fork.2 fsync.2 \
-	getdirentries.2 getdtablesize.2 \
-	getfh.2 getfsstat.2 getgid.2 getgroups.2 getitimer.2 getlogin.2 \
-	getloginclass.2 getpeername.2 getpgrp.2 getpid.2 getpriority.2 \
-	getrlimit.2 getrusage.2 getsid.2 getsockname.2 \
-	getsockopt.2 gettimeofday.2 getuid.2 \
-	intro.2 ioctl.2 issetugid.2 jail.2 kenv.2 kill.2 \
-	kldfind.2 kldfirstmod.2 kldload.2 kldnext.2 kldstat.2 kldsym.2 \
-	kldunload.2 kqueue.2 ktrace.2 link.2 lio_listio.2 listen.2 \
-	lseek.2 \
+	bind.2 brk.2 \
+	cap_enter.2 cap_fcntls_limit.2 cap_ioctls_limit.2 cap_rights_limit.2 \
+	chdir.2 chflags.2 chmod.2 chown.2 chroot.2 clock_gettime.2 close.2 \
+	closefrom.2 connect.2 cpuset.2 cpuset_getaffinity.2 \
+	dup.2 \
+	execve.2 _exit.2 extattr_get_file.2 \
+	fcntl.2 ffclock.2 fhopen.2 flock.2 fork.2 fsync.2 \
+	getdirentries.2 getdtablesize.2 getfh.2 getfsstat.2 getgid.2 \
+	getgroups.2 getitimer.2 getlogin.2 getloginclass.2 getpeername.2 \
+	getpgrp.2 getpid.2 getpriority.2 getrlimit.2 getrusage.2 getsid.2 \
+	getsockname.2 getsockopt.2 gettimeofday.2 getuid.2 \
+	intro.2 ioctl.2 issetugid.2 \
+	jail.2 \
+	kenv.2 kill.2 kldfind.2 kldfirstmod.2 kldload.2 kldnext.2 kldstat.2 \
+	kldsym.2 kldunload.2 kqueue.2 ktrace.2 \
+	link.2 lio_listio.2 listen.2 lseek.2 \
 	madvise.2 mincore.2 minherit.2 mkdir.2 mkfifo.2 mknod.2 mlock.2 \
 	mlockall.2 mmap.2 modfind.2 modnext.2 modstat.2 mount.2 mprotect.2 \
 	mq_close.2 mq_getattr.2 mq_notify.2 mq_open.2 mq_receive.2 mq_send.2 \
-	mq_setattr.2 \
-	msgctl.2 msgget.2 msgrcv.2 msgsnd.2 \
-	msync.2 munmap.2 nanosleep.2 nfssvc.2 ntp_adjtime.2 open.2 \
+	mq_setattr.2 msgctl.2 msgget.2 msgrcv.2 msgsnd.2 msync.2 munmap.2 \
+	nanosleep.2 nfssvc.2 ntp_adjtime.2 \
+	open.2 \
 	pathconf.2 pdfork.2 pipe.2 poll.2 posix_fadvise.2 posix_fallocate.2 \
-	posix_openpt.2 profil.2 \
-	pselect.2 ptrace.2 quotactl.2 \
+	posix_openpt.2 profil.2 pselect.2 ptrace.2 \
+	quotactl.2 \
 	read.2 readlink.2 reboot.2 recv.2 rename.2 revoke.2 rfork.2 rmdir.2 \
 	rtprio.2
 .if !defined(NO_P1003_1B)
-MAN+=	sched_get_priority_max.2 sched_setparam.2 \
-	sched_setscheduler.2 sched_yield.2
+MAN+=	sched_get_priority_max.2 sched_setparam.2 sched_setscheduler.2 \
+	sched_yield.2
 .endif
-MAN+=	sctp_generic_recvmsg.2 sctp_generic_sendmsg.2 sctp_peeloff.2 \
-	select.2 semctl.2 semget.2 semop.2 send.2 setfib.2 sendfile.2 \
-	setgroups.2 setpgid.2 setregid.2 setresuid.2 setreuid.2 setsid.2 \
-	setuid.2 shmat.2 shmctl.2 shmget.2 shm_open.2 shutdown.2 \
-	sigaction.2 sigaltstack.2 sigpending.2 sigprocmask.2 sigqueue.2 \
-	sigreturn.2 sigstack.2 sigsuspend.2 sigwait.2 sigwaitinfo.2 \
-	socket.2 socketpair.2 stat.2 statfs.2 \
-	swapon.2 symlink.2 sync.2 sysarch.2 syscall.2 \
-	timer_create.2 timer_delete.2 timer_settime.2 \
-	truncate.2 umask.2 undelete.2 \
-	unlink.2 utimes.2 utrace.2 uuidgen.2 vfork.2 wait.2 write.2
+MAN+=	sctp_generic_recvmsg.2 sctp_generic_sendmsg.2 sctp_peeloff.2 select.2 \
+	semctl.2 semget.2 semop.2 send.2 setfib.2 sendfile.2 setgroups.2 \
+	setpgid.2 setregid.2 setresuid.2 setreuid.2 setsid.2 setuid.2 shmat.2 \
+	shmctl.2 shmget.2 shm_open.2 shutdown.2 sigaction.2 sigaltstack.2 \
+	sigpending.2 sigprocmask.2 sigqueue.2 sigreturn.2 sigstack.2 \
+	sigsuspend.2 sigwait.2 sigwaitinfo.2 socket.2 socketpair.2 stat.2 \
+	statfs.2 swapon.2 symlink.2 sync.2 sysarch.2 syscall.2 \
+	timer_create.2 timer_delete.2 timer_settime.2 truncate.2 \
+	umask.2 undelete.2 unlink.2 utimes.2 utrace.2 uuidgen.2 \
+	vfork.2 \
+	wait.2 write.2
 
 MLINKS+=access.2 eaccess.2 access.2 faccessat.2
 MLINKS+=brk.2 sbrk.2
 MLINKS+=cap_enter.2 cap_getmode.2
-MLINKS+=cap_new.2 cap_getrights.2
+MLINKS+=cap_fcntls_limit.2 cap_fcntls_get.2
+MLINKS+=cap_ioctls_limit.2 cap_ioctls_get.2
+MLINKS+=cap_rights_limit.2 cap_rights_get.2
 MLINKS+=chdir.2 fchdir.2
 MLINKS+=chflags.2 fchflags.2 chflags.2 lchflags.2
 MLINKS+=chmod.2 fchmod.2 chmod.2 fchmodat.2 chmod.2 lchmod.2
